Yamls/geoms/api_deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: geom-desc-api
  namespace: geoms
spec:
  selector:
    app: geom-desc-api
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1
kind: Deployment
metadata:
  name: geom-desc-api
  namespace: geoms
spec:
  selector:
    matchLabels:
      app: geom-desc-api
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      name: geom-desc-api
      labels:
        app: geom-desc-api
    spec:
      containers:
      - name: geom-desc-api
        image: euclia/geom_descriptors
        ports:
        - containerPort: 5000
---
