Yamls/geoms/api_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: geom-desc-api
  namespace: geoms
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts: 
    - geomdescapi.cloud.nanosolveit.eu
    secretName: nanofase-api-cert
  rules:
  - host: geomdescapi.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: geom-desc-api
          servicePort: 5000
        path: /
